src/objects/MUSW__PRTANY_QUERY__c.object
<CustomObject>
    <description>Internal - queries used by the printer package to retrieve content</description>
    <fields>
        <fullName>MUSW__Filter__c</fullName>
        <description>The where condition appended to the resulting SOQL query</description>
        <label>Filter</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MUSW__Object_Name__c</fullName>
        <label>Object Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MUSW__PRTANY_PACKAGE__c</fullName>
        <label>Printer Package</label>
        <referenceTo>MUSW__PRTANY_PACKAGE__c</referenceTo>
        <relationshipName>R00N60000001Hvr7EAC</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>MUSW__Sequence__c</fullName>
        <label>Sequence</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MUSW__Single_Row_Selection_Fields__c</fullName>
        <label>Single Row Selection Fields</label>
        <type>TextArea</type>
    </fields>
    <label>Printer Query</label>
    <nameField>
        <label>Query Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Printer Queries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>